# credit-agreement-extraction

./: .env.example  .gitignore  0001047469-05-000037.nc  Makefile  README.md  pyproject.toml  requirements.txt
analysis_samples/: candidate_pricing_grid.html  ex10_pricing_grid.html  pricing_table_20240102.nc.tar.gz_0000090168-23-000083.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0000090168-23-000083.nc_seg29.html  pricing_table_20240102.nc.tar.gz_0000090168-23-000083.nc_seg38.html  pricing_table_20240102.nc.tar.gz_0000950123-23-008409.corr01_seg1.html  pricing_table_20240102.nc.tar.gz_0000950123-23-008627.corr01_seg1.html  pricing_table_20240102.nc.tar.gz_0000950170-24-000019.nc_seg3.html  pricing_table_20240102.nc.tar.gz_0000950170-24-000059.nc_seg2.html  pricing_table_20240102.nc.tar.gz_0001104659-24-000034.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001104659-24-000086.nc_seg2.html  pricing_table_20240102.nc.tar.gz_0001104659-24-000146.nc_seg2.html  pricing_table_20240102.nc.tar.gz_0001104659-24-000237.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001104659-24-000347.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001140361-24-000034.nc_seg4.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000253.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000442.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000495.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000672.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000728.nc_seg13.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000733.nc_seg2.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000734.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000776.nc_seg4.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000777.nc_seg4.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000780.nc_seg4.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000781.nc_seg4.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000783.nc_seg4.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000786.nc_seg4.html  pricing_table_20240102.nc.tar.gz_0001193125-24-000787.nc_seg4.html  pricing_table_20240102.nc.tar.gz_0001445546-23-008745.nc_seg1.html  pricing_table_20240102.nc.tar.gz_0001999371-24-000006.nc_seg1.html  pricing_table_20240103.nc.tar.gz_0000006845-24-000004.nc_seg1.html  pricing_table_20240103.nc.tar.gz_0000006845-24-000004.nc_seg24.html  pricing_table_20240103.nc.tar.gz_0000919574-24-000042.nc_seg1.html  pricing_table_20240103.nc.tar.gz_0000940944-24-000005.nc_seg1.html  (+37 more)
apptainer/: build_sif.sh  edgar_filing.def
(+865 files in other folders)
