[tool.poetry]
name = "credit-agreement-extraction"
version = "0.1.0"
description = "Utilities for extracting and analysing EDGAR filings plus the agent gateway."
readme = "README.md"
authors = ["EDGAR Pipeline"]
license = "MIT"
packages = [
  { include = "edgar_filing_pipeline", from = "src" },
  { include = "gateway", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
beautifulsoup4 = ">=4.12"
lxml = ">=5.2"
pandas = ">=2.2"
pyarrow = ">=14.0"
tabulate = ">=0.9"
requests = ">=2.31"
fastapi = ">=0.111"
uvicorn = ">=0.30"

[tool.poetry.group.dev.dependencies]
black = ">=24.0"
ruff = ">=0.5"

[tool.poetry.scripts]
edgar-pipeline = "edgar_filing_pipeline.cli:main"
gateway-server = "gateway.cli:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
