[tool.poetry]
name = "credit-agreement-extraction"
version = "0.1.0"
description = "Utilities for extracting and analysing EDGAR filings plus the agent gateway."
readme = "README.md"
authors = ["EDGAR Pipeline"]
license = "MIT"
packages = [
  { include = "edgar_filing_pipeline", from = "src" },
  { include = "gateway", from = "src/gateway/src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
beautifulsoup4 = ">=4.12"
lxml = ">=5.2"
pandas = ">=2.2"
pyarrow = ">=14.0"
tabulate = ">=0.9"
requests = ">=2.31"
fastapi = ">=0.111"
uvicorn = ">=0.30"
openai = ">=2.6"
httpx = ">=0.28"
pydantic-settings = ">=2.4"
structlog = ">=24.3"

[tool.poetry.group.dev.dependencies]
black = ">=24.0"
ruff = ">=0.5"
pytest = ">=8.0"

[tool.poetry.scripts]
edgar-pipeline = "edgar_filing_pipeline.cli:main"
gateway-server = "gateway.edgar.cli:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
