[tool.poetry]
name = "credit-agreement-pipeline"
version = "0.1.0"
description = "Structured, run-scoped pipeline for EX-10 performance-pricing extraction."
authors = ["Saul (owner)"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pipeline", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.2"
pyarrow = ">=14.0"
rich = ">=13.7"
click = ">=8.1"
beautifulsoup4 = ">=4.12"
lxml = ">=5.2"
PyYAML = ">=6.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.0"
ruff = ">=0.5"
pytest = ">=8.0"

[tool.poetry.scripts]
pipeline = "pipeline.run:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
